--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fullpage": "^0.1.19",
     "sass": "^1.61.0",
     "swiper": "^9.2.0"
   }
